<resources>
    <string name="app_name">MyLifeTrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">apply</string>
    <string name="empty">empty</string>
    <string name="text">text</string>
    <string name="button">BUTTON</string>
    <string name="_222">222</string>
    <string name="regular">Регулярность</string>
    <string name="days">Каждый день</string>
    <string name="weeks">Каждую неделю</string>
    <string name="months">Каждый месяц</string>
    <string name="years">Каждый год</string>
    <string name="cancel">Отмена</string>
    <string name="regular_2">Regular</string>
    <string name="gaming">Играть в теннис</string>
    <string name="every_week">Каждую неделю</string>
    <string name="save">Принять</string>
    <string name="date">дд.мм.гг</string>
    <string name="eDay">Каждый день</string>
    <string name="plus">+</string>
    <string name="need_task">Введите нужную задачу</string>
    <string name="apply_btn">Принять</string>
    <string name="title">Title</string>
</resources>