<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_shit_con"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:layout_gravity="center_horizontal|center_vertical"
    app:cardCornerRadius="12dp">

    <TextView
        android:id="@+id/time"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:background="#FF03DAC5"
        android:text="@string/regular"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/time">

        <RadioButton
            android:id="@+id/btn_eDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#FF03DAC5"
            android:text="@string/days"
            android:textColor="#FF03DAC5"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn_eWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#FF03DAC5"
            android:text="@string/weeks"
            android:textColor="#FF03DAC5"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn_eMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#FF03DAC5"
            android:text="@string/months"
            android:textColor="#FF03DAC5"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn_eYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#FF03DAC5"
            android:text="@string/years"
            android:textColor="#FF03DAC5"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cancel"
        android:textColor="#FF03DAC5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/radio"
        app:layout_constraintRight_toRightOf="@id/radio"
        app:layout_constraintTop_toBottomOf="@id/radio" />


</androidx.constraintlayout.widget.ConstraintLayout>